# mtg-draft-models

./: pyproject.toml
mtgdrafter/dataloading/: cards.py  expansions.py  scryfall_downloader.py
mtgdrafter/loading/: expansions.py  scryfall_downloader.py
mtgdrafter/scripts/: run_downloader.py
mtgdrafter/utils/scripts/: run_downloader.py
